--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -148,6 +147,8 @@
         <div class="skill"><a title="Animation"target="_blank" href="projects8/index.html"><img src="images1/animation_9453453.png" alt=""></a></div>
         <div class="skill"><a title="timer" target="_blank" href="projects9/index.html"><img src="images1/free_icon_1 (4).svg" alt=""></a></div>
         <div class="skill"><a title="Jonson's Market" target="_blank" href="projects10/index.html"><img src="images1/free_icon_1 (5).svg" alt=""></a></div>
+        <div class="skill"><a title="Ramadan 2024" target="_blank" href="projects11/index2.html"><img src="images1/mosque.png" alt=""></a></div>
+        <div class="skill"><a title="My new website" target="_blank" href="project12/index.html"><img src="images1/ux.png" ></a></div>
 
 
     </div>
@@ -161,7 +162,8 @@
     <footer>
     <div class="content-footer" id="contact me">
     <h2>Mohammed <span>Elshaer</span></h2>
-    <p> for more Html ,css ,more wibsite-please click on the link blow to subsecribe to my channel:</p>
+    <p> for more Html ,css ,more wibsite-please click on the link blow to subsecribe to my channel 
+        Credit to my teacher <span>MR Ahmed Gabr</span></p>
     <p class="end">
     code by Mohammed
     </p>
@@ -170,9 +172,13 @@
     <a class="lol" href="#">
         <i id="lll" class="fa-solid fa-up-down-left-right" style="color: #000000;"></i>
         move to top</a>
+        <br>
+        <a class="lol" href="project12/index.html">
+            Gamer Web</a>
     </div>
     </footer> 
     </div>
+    
 
     
     <script>
