--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <a target="_blank" href="https://youtube.com/@programmer-wo7ks?si=bd1rmxgZSceD6sTc" ><img src="images1/youtube_270834.png"alt=""></a>
 
-                    <a target="_blank" href="https://instagram.com/mohammed2282012?igshid=OGQ5ZDc2ODk2ZA==" ><img src="images1/free_icon_1 (2).svg"alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/invites/contact/?igsh=l1vnaaht681e&utm_content=uudokvl" ><img src="images1/free_icon_1 (2).svg"alt=""></a>
 
                     <a target="_blank" href="https://pin.it/5MZfDB9"><img src="images1/pinterest.png"alt=""></a>
 
