--- a/project12/index.html
+++ b/project12/index.html
@@ -116,7 +116,7 @@
             <div class="contents">
                 <div class="cards">
                     <div class="card">
-                    <a href="" target="_blank">
+                    <a href="https://play.google.com/store/apps/details?id=com.mojang.minecraftpe" target="_blank">
                         <div class="cardImg">
                             <img src="images/i-made-a-3d-version-of-the-new-minecraft-logo-v0-j7zui59ihaeb1.webp" alt="">
                         </div>
@@ -126,61 +126,73 @@
                         </div>
                     </a>
                     </div>
-                    <div class="card">
-                        <div class="cardImg">
-                            <img src="images/3LJBrlGf_ARh8oho2AnWBTRD087OlhfD5TOm6ww2lO8_350x200_3x-0 (1).jpeg" alt="">
+                    <a target="_blank" href="https://www.g2a.com/forza-horizon-3-xbox-live-key-windows-10-global-i10000027562001?uuid=b2934e43-114f-49de-be6a-804fdf305f12&er=3840535b63de4679399fc816be44c58c628dd4b1389ab19584849026746e2cc409fea43b03d141b45b61fe3ccf0de71e&___language=en&adid=GA-EG_PB_MIX_PMAX_FEED_All-Products&id=47&gad_source=1&gclid=CjwKCAjw4f6zBhBVEiwATEHFVtfYpi7IhHQcPME1zWY6ilZi9FA8yQqqL4nlfYmSpnDihKE3ZI3eShoCBosQAvD_BwE&gclsrc=aw.ds">
+                        <div class="card">
+                            <div class="cardImg">
+                                <img src="images/3LJBrlGf_ARh8oho2AnWBTRD087OlhfD5TOm6ww2lO8_350x200_3x-0 (1).jpeg" alt="">
+                            </div>
+                            <div class="cardDetails">
+                                <h3>Forza Horizion 3</h3>
+                                <p>This game is a best car game in the other car games</p>
+                            </div>
                         </div>
-                        <div class="cardDetails">
-                            <h3>Forza Horizion 3</h3>
-                            <p>This game is a best car game in the other car games</p>
+                    </a>
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.activision.callofduty.shooter">
+                        <div class="card">
+                            <div class="cardImg">
+                                <img src="images/call-of-duty-mobile---button-sm00-1552980373997.webp" alt="">
+                            </div>
+                            <div class="cardDetails">
+                                <h3>Call of Duty (COD)</h3>
+                                <p>IT from top free and top games in battle gamesit is look like real</p>
+                            </div>
                         </div>
+                    </a>
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.tencent.ig">
+                        <div class="card">
+                            <div class="cardImg">
+                                <img src="images/gametiles_com.tencent.iglite.jpg" alt="">
+                            </div>
+                            <div class="cardDetails">
+                                <h3>PUBG</h3>
+                                <p>IT the same company of COD it is so exiting game try it..</p>
+                            </div>
+                        </div>
+                    </a>
+                    
+                    <a href="https://a.co/d/06IcjNE2" target="_blank">
+                        <div class="card">
+                            <div class="cardImg">
+                                <img src="images/139522_The_Classrooms.webp" alt="">
+                            </div>
+                            <div class="cardDetails">
+                                <h3>Class Rooms</h3>
+                                <p>classrooms is the new game in horror , They achieved great and brilliant success</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a target="_blank" href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj-0squ04CHAxXUREECHeaVBikYABAKGgJ3cw&co=1&agsac=ONZ2ySl0hYQ&gclid=CjwKCAjw4f6zBhBVEiwATEHFViPX71cAhCPaFdEBOaAnfvkXCvQjAg1FEQJbJg6tatkXaxiGqczfvhoC8BYQAvD_BwE&cit=CkUKCQjw4f6zBhDDARI0AMAHAUftpEggGpx3_fyVMrWtWE6k-yu4W6pxUt3PJa0dpMSYUfgWz2EEZMdMb8k8N9e1XBoCjpvw_wcB&ohost=www.google.com&cid=CAESsAHg9hkvjwujnOypq3H7B39unNfqIUoW2cx--fn_Ud4e8H_6DdZZnvV2wOQMcV1RV_OlOPqNqmeApgBhe9WTlV5mAArrXfDzrp_Gr4OAvok2cvYup1MVFz9y3SS4yLrqR9qOIHOZmmJ6nNO0BK1HrRfoTCmFZzKJkVnJXr1drk9oHUBJssZ0nFA89cThxH8OpNAYoWoYRqKSHoq7XaLzQndcyXNUKp404hhM30xiPIXMmw&sig=AOD64_1F3mmQhl8LHiH_TeRF7t2e9Iltiw&ctype=5&q=&ved=2ahUKEwjs1MWu04CHAxWlTKQEHQmVBzwQwg8oAHoECAUQDA&adurl=&ms=CoACBGU8dlFcrRiaD_Jbhp93NI2VH1ozTfOiqo_KR_uC03EKOORapDRmT2wpc2m8i00DxWJI00MmLDRy9yaGQ-v0olLBSpFImksM8rDmWF9oBQRwVAhvz2_X1XgWt8H---w9p9RsZEE52QVHUZE542D_hJoppC_I80AlpjJXy8V7S-tm1B0OpE4HDQN8ru7Itls1k2ZtmZdJC1XADQnU7MQ2BcfesTN5vMmDykN1ZBKPuSBRKbaaIrIz7NFJO1lfqeBFBYTCehWd3X_67YSqBy8Rk5XW2O6ArhLUWU8KSrPG63miDuy2DFQJ-UifoGo-MfAe4B6uq8pc31wB41AVNLD0PAqAAvsV6jr4ZLPs8Iq6FGSrCKB8knmCJdRWQufN5-aUJ67PYXSsg92MhK51fF96pLVgutpF_msvldaNJUHTQfKZ0nooN8OlgBHRhjkBSMB6Ow06lJp5OrUQFL_1tIGFaK0ffxl8D2LfQOVHKmDX_jCOO3kExoU6KgLq74-vCnprGOOAYBdeeEp2fnRgSzDxQUhfSDGb-q5Z9gmhE_LVAWqO67HnlUmHYgucmFWSoA3GApADPucJ5ZzGTSMYdgM-HG3YZzvwESLc5SRxNv-QF5-gicC-JtYA2IzaR8dza068InQQIsORQg43EN5XnboRuISfKSvToUqOJIkydq0mdrMypDESEDgSL8wss09hipWvzqxCNAo">
+                        <div class="card">
+                            <div class="cardImg">
+                                <img src="images/images.jpg" alt="">
+                            </div>
+                            <div class="cardDetails">
+                                <h3>Very Little Nightmares </h3>
+                                <p>IT is a best puzzle game in world But it is for money</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a target="_blank" href="https://www.g2a.com/ea-sports-fc-24-xbox-one-xbox-live-account-account-global-i10000340096024?uuid=f0734453-4536-4d77-91ec-668e301f2cc4&___currency=EGP&er=12d29f0941bdcfd559e7da3d0188e8267fc5d65eef66f825c2995bd2274ddb6d557d8fbe9700b42e09cd012c4b50db1f&___language=en&adid=GA-EG_PB_MIX_PMAX_FEED_All-Products&id=47&gad_source=1&gclid=CjwKCAjw4f6zBhBVEiwATEHFVhblv27ghBOhltU9HT2vz3rs-Rbn9mJFl8m5-OxRfWZguJ7H3rroYRoCSYoQAvD_BwE&gclsrc=aw.ds">
+                        <div class="card">
+                            <div class="cardImg">
+                                <img src="images/143106037_IGDB-272x380.jpg" alt="">
+                            </div>
+                            <div class="cardDetails">
+                                <h3>Fifa 24 (FC24) </h3>
+                                <p>IT is a best sport game it made by EASports </p>
+                            </div>
                     </div>
-                    <div class="card">
-                        <div class="cardImg">
-                            <img src="images/call-of-duty-mobile---button-sm00-1552980373997.webp" alt="">
-                        </div>
-                        <div class="cardDetails">
-                            <h3>Call of Duty (COD)</h3>
-                            <p>IT from top free and top games in battle gamesit is look like real</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="cardImg">
-                            <img src="images/gametiles_com.tencent.iglite.jpg" alt="">
-                        </div>
-                        <div class="cardDetails">
-                            <h3>PUBG</h3>
-                            <p>IT the same company of COD it is so exiting game try it..</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="cardImg">
-                            <img src="images/139522_The_Classrooms.webp" alt="">
-                        </div>
-                        <div class="cardDetails">
-                            <h3>Class Rooms</h3>
-                            <p>classrooms is the new game in horror , They achieved great and brilliant success</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="cardImg">
-                            <img src="images/images.jpg" alt="">
-                        </div>
-                        <div class="cardDetails">
-                            <h3>Very Little Nightmares </h3>
-                            <p>IT is a best puzzle game in world But it is for money</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="cardImg">
-                            <img src="images/143106037_IGDB-272x380.jpg" alt="">
-                        </div>
-                        <div class="cardDetails">
-                            <h3>Fifa 24 (FC24) </h3>
-                            <p>IT is a best sport game it made by EASports </p>
-                        </div>
-                </div>
-
+                    </a>
             </div>
         </div>
     </div>
