--- a/project12/index.html
+++ b/project12/index.html
@@ -56,7 +56,7 @@
                 <p>I don't Know the key of success but the key failure is trying to please everybody </p>
                 <p>MY 
                 first Web</p>
-                <a href="https://projects.tatbeqak.site/p/8/index.html"><button>First Web</button></a>
+                <a href="http://mohamedgamer.store/"><button>First Web</button></a>
             </div>
         </div>
     </div>
