--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         move to top</a>
         <br>
         <a class="lol" href="project12/index.html">
-            Gamer Web</a>
+            Gamer website</a>
     </div>
     </footer> 
     </div>
