--- a/project14/index.html
+++ b/project14/index.html
@@ -3,22 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Login</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="mainDiv">
-        <p id="errorText">Email or Password is not correct</p>
         <label for="">Email</label>
         <br>
-        <input type="email" name="" id="emailInput">
+        <p id="errorText">Email or Password is not correct</p>
+        <input type="email" id="userEmail" placeholder="Enter your email">
         <br><br>
         <label for="">Password</label>
         <br>
-        <input type="password" name="g" id="passwordInput">
+        <input type="password" id="userPassword" placeholder="Enter your password">
         <br><br>
-        <button onclick="loginUser()">Log in  </button>
+        <button onclick="checkLogin()">Login</button>
     </div>
+    <div class="spinner-grow text-danger" id="spinnerDiv"></div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
