--- a/project12/index.html
+++ b/project12/index.html
@@ -56,11 +56,11 @@
                 <p>I don't Know the key of success but the key failure is trying to please everybody </p>
                 <p>MY 
                 first Web</p>
-                <a href="http://mohamedgamer.store/"><button>First Web</button></a>
+                <a class="lolo" href="http://mohamedgamer.store/"><button class="lolo">First Web</button></a>
             </div>
         </div>
     </div>
-
+    
     <!-- End Landing -->
 
     <!-- Start Services -->
