--- a/projects2/gallery.html
+++ b/projects2/gallery.html
@@ -39,6 +39,6 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQ1RCK8lefzuySiAMaEatBDZcwDIwwKqN-rg&usqp=CAU" alt="">
     <input type="checkbox" name="" id="">
     <br><br><br><br>
-    <a id="lol" href="https://projects.tatbeqak.site/p/8/index.html">Go Back Home</a>
+    <a id="lol" href="http://mohamedgamer.store/">Go Back Home</a>
 </body>
 </html>
