--- a/projects3/index.html
+++ b/projects3/index.html
@@ -27,7 +27,7 @@
     <br><br>
     <h4 id="momo">Items Count: <span id="itemsCount">0</span></h4>
     <br>
-    <a id="lol" href="https://projects.tatbeqak.site/p/8/index.html">go back to main page</a>
+    <a id="lol" href="http://mohamedgamer.store/">go back to main page</a>
   </div>
 </body>
 </html>
