--- a/projects4/no.html
+++ b/projects4/no.html
@@ -26,7 +26,7 @@
         <input type="date" id="dateInput">
         <br><br>
         <button id="lol" onclick="calculateAge()">Calculate</button>
-        <a id="lol" href="https://projects.tatbeqak.site/p/8/index.html">GO to main page</a>
+        <a id="lol" href="http://mohamedgamer.store/">GO to main page</a>
         <br><br>
         <h1 id="jojo">Age <span>Calculator</span></h1>
         <br>
