--- a/projects5/play.html
+++ b/projects5/play.html
@@ -11,7 +11,7 @@
     <img class="fo" src="images/3 (2).jpg" alt="">
     <br><br><br><br>
     <nav>
-        <a id="lol" href="https://projects.tatbeqak.site/p/8/index.html">Go Back Home</a>
+        <a id="lol" href="http://mohamedgamer.store/">Go Back Home</a>
     </nav>
     <br><br><br><br>
 
