--- a/projects9/index.html
+++ b/projects9/index.html
@@ -23,7 +23,7 @@
         <br><br>
         <button onclick="restartTimer()" class="watchButton">Restart</button>
         <br><br>
-        <a class="watchButton" href="https://projects.tatbeqak.site/p/8/index.html">home</a>
+        <a class="watchButton" href="http://mohamedgamer.store/">home</a>
         <br><br>
     </div>
     <script src="script.js"></script>
