--- a/projects6/index.html
+++ b/projects6/index.html
@@ -88,7 +88,7 @@
     <input type="color" name="" id="colorInput">
     <h3 id="colorResult"></h3>
     <br>
-    <a id="lol" href="https://projects.tatbeqak.site/p/8/index.html">Go back Home</a>
+    <a id="lol" href="http://mohamedgamer.store/">Go back Home</a>
     <br><br>
 
     <script src="script.js"></script>
