--- a/projects/mo.html
+++ b/projects/mo.html
@@ -85,7 +85,7 @@
 
         <button type="button" class="btn btn-outline-light text-dark" onclick="lightMode()">LightMode</button>
         <br><br>
-        <a id="lol" href="https://projects.tatbeqak.site/p/8/index.html">Go to Home</a>
+        <a id="lol" href="http://mohamedgamer.store/">Go to Home</a>
 
 </body>
 </html>
