--- a/project14/index.html
+++ b/project14/index.html
@@ -9,7 +9,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sign in/style.css">
 </head>
 <body>
     <div id="mainDiv">
@@ -23,8 +23,10 @@
         <input type="password" id="userPassword" placeholder="Enter your password">
         <br><br>
         <button onclick="checkLogin()">Login</button>
+        <br><br>
+        <button>sign up</button>
     </div>
     <div class="spinner-grow text-danger" id="spinnerDiv"></div>
-    <script src="script.js"></script>
+    <script src="sign in/script.js"></script>
 </body>
 </html>
