--- a/project14/index.html
+++ b/project14/index.html
@@ -24,7 +24,9 @@
         <br><br>
         <button onclick="checkLogin()">Login</button>
         <br><br>
-        <button>sign up</button>
+        <a href="sign up/signup.html">
+            <button>sign up</button>
+        </a>
     </div>
     <div class="spinner-grow text-danger" id="spinnerDiv"></div>
     <script src="sign in/script.js"></script>
