--- a/project14/sign up/signup.html
+++ b/project14/sign up/signup.html
@@ -29,7 +29,7 @@
         <label for="">Age</label>
         <input type="number" name="" id="userAge">
         <br><br>
-        <button onclick="checkInput">Sign up</button>
+        <button onclick="checkInput()">Sign up</button>
 
         <script src="signup.js"></script>
 </body>
