--- a/prolects15/index.html
+++ b/prolects15/index.html
@@ -56,8 +56,7 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                        onclick="checkInput()">Save</button>
+                    <button class="lol" onclick="checkInput()">Save</button>
                 </div>
 
             </div>
@@ -75,9 +74,9 @@
         <div>
             <h3>Please login to get data</h3>
             <br><br>
-            <button class="btn btn-lg btn-success" onclick="showLogin()">Login</button>
+            <button class="dataBtn" onclick="showLogin()">Login</button>
             <br><br>
-            <button class="btn btn-lg btn-primary">Signup</button>
+            <button class="dataBtn" onclick="showSignup()">Signup</button>
         </div>
 
     </div>
