--- a/prolects15/index.html
+++ b/prolects15/index.html
@@ -56,7 +56,7 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button class="lol" onclick="checkInput()">Save</button>
+                    <button  type="button" class="btn btn-primary" data-bs-dismiss="modal"  onclick="checkInput()">Save</button>
                 </div>
 
             </div>
@@ -135,22 +135,7 @@
         </div>
         <!--end Signup div -->
 
-    <!-- Start Ads Div -->
-
-    <div id="adsDiv">
-
-        <div>
-            Ads
-        </div>
-
-        <div>
-            Ads
-        </div>
-
-    </div>
-
-    <!-- End Ads Div -->
-
+    
 </body>
 
 </html>
