--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
 
         <div class="skill"><a title="A Simple log in" target="_blank" href="project14/index.html"><img src="images1/login_9314443.png" ></a></div>
 
+                <div class="skill"><a title="Easy Notes" target="_blank" href="projects15/index.html"><img src="images1/Notes.png" ></a></div>
+
 
     </div>
 
