--- a/projects15/index.html
+++ b/projects15/index.html
@@ -34,7 +34,7 @@
         <i class="bi bi-plus-circle-fill"></i>
     </div>
     <div id="zeroNotes">
-        <img src="images/folder (1).png" alt="">
+        <img src="images/error_17008819.png" alt="">
         <h3>No notes found</h3>
     </div>
 
