--- a/projects15/index.html
+++ b/projects15/index.html
@@ -56,7 +56,7 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button  type="button" class="btn btn-primary" data-bs-dismiss="modal"  onclick="checkInput()">Save</button>
+                    <button  type="button" class="btn btn-danger" data-bs-dismiss="modal"  onclick="checkInput()">Save</button>
                 </div>
 
             </div>
