--- a/project12/index.html
+++ b/project12/index.html
@@ -207,8 +207,14 @@
             <div class="details">
                 <h3>Address</h3>
                 <p>Salamon elkomash  Mansoura  <br> Egypt</p>
+                <br>
                 <h3>Email</h3>
-                <p>mohammedahmed22820@gmail.com</p>
+                <p id="pola">mohammedahmed22820@gmail.com</p>
+                                <h3>or</h3>
+                <p id="pola">mohammedahmedatef772@gmail.com</p>
+
+                <p></p>
+                <br>
                 <h3>Phone</h3>
                 <p>+20 128 295 9278</p>
             </div>
