--- a/projects17/index.html
+++ b/projects17/index.html
@@ -24,6 +24,7 @@
             <button onclick="generateCode()">Generate</button>
 
             </div>
+            <div id="dividerDiv"></div>
             <div id="resultDiv">
                 <div id="adsDiv">
                     Ads
