--- a/index.html
+++ b/index.html
@@ -163,7 +163,12 @@
 
         <div class="skill"><a title="A Simple log in" target="_blank" href="project14/index.html"><img src="images1/login_9314443.png" ></a></div>
 
-                <div class="skill"><a title="Easy Notes" target="_blank" href="projects15/index.html"><img src="images1/Notes.png" ></a></div>
+        <div class="skill"><a title="Easy Notes" target="_blank" href="projects15/index.html"><img src="images1/Notes.png" ></a></div>
+
+                <div class="skill"><a title="Weather App" target="_blank" href="projects16/index.html"><img src="images1/7795605_weather_rain_cloud_icon.png"></a></div>
+
+                <div class="skill"><a title="QRcode Generatore" target="_blank" href="projects17/index.html"><img src="images1/Qr code.png"></a></div>
+
 
 
     </div>
